# template_basic_plugin

./: .gitignore  CHANGELOG.rst  README.md  pyproject.toml
.github/workflows/: lint.yaml  ruleset-doc-test.yaml  ruleset-lint.yaml  ruleset-pr-check-boxes-complete.yaml  ruleset-proper-rst-documentation-edits.yaml
cool_plugins/plugins/modules/algorithms/: cloud_masked_data.py  my_cloud_depth.py  pmw_89test.py
cool_plugins/plugins/modules/colormappers/: __init__.py  colorful_cloud_height.py
cool_plugins/plugins/modules/output_formatters/: my_netcdf_output.py
cool_plugins/plugins/yaml/feature_annotators/: tutorial.yaml
cool_plugins/plugins/yaml/gridline_annotators/: tutorial.yaml
cool_plugins/plugins/yaml/products/: my_abi_products.yaml  my_clavrx_products.yaml  my_fusion_products.yaml  my_layered_products.yaml
cool_plugins/plugins/yaml/sectors/static/: my_conus_sector.yaml
docs/: pip_install_instructions.rst  template_instructions.rst
docs/source/getting-started/: index.rst  template_instructions.rst
docs/source/introduction/: index.rst
docs/source/release/latest/: update-black-formatting.rst
docs/source/releases/: index.rst  v0_1_0.rst
docs/source/releases/latest/: 0.1.0.yaml  20-update-pyproject-depedencies.yaml  29-plugins-with-capital-letters-do-not-install-correctly.yaml  34-update-integration-test-comparrison-imagery-for-matplotlib-3100.yaml  branch_name.yaml  initial-commit.yaml  t  update-black-formatting.yaml
docs/source/userguide/: template_instructions.rst
my_package/plugins/modules/algorithms/: pmw_89test.py
my_package/plugins/modules/readers/: my_reader.py
my_package/plugins/yaml/product_defaults/: 89-Test.yaml  89_PCT_Test.yaml  89test.yaml  @Product-Name@.yaml  Cloud-Height.yaml  clavrx_cloud_top_height.yaml
my_package/plugins/yaml/products/: @source_name@.yaml  amsr2_family.yaml  amsr2_fully_specified.yaml  amsr2_product_defaults.yaml  amsr2_test.yaml  clavrx.yaml
my_package/yaml_configs/product_inputs/: amsr2.yaml
my_package/yaml_configs/product_params/: 89-Test.yaml
setup/: USER_MODIFY_config
tests/: test_all.sh
tests/integration_tests/: test_my_package.py  test_template_basic_plugin.py  test_tiny_sectors_my_package.py
tests/scripts/: amsr2.global.89test.imagery_clean.sh  amsr2.global_clean.89-PCT-Using-Product-Defaults.sh  amsr2.global_clean.89-Test.sh  amsr2.tc_clean.89-PCT-Family.sh  amsr2.tc_clean.89-PCT-Fully-Specified.sh  amsr2.tc_clean.89-Test.sh  clavrx.conus_annotated.cloud-base-ascii-colors.sh  clavrx.conus_annotated.cloud-base-builtin-colors.sh  clavrx.conus_annotated.cloud-base-python-colors.sh  clavrx.conus_annotated.my-cloud-depth.sh  clavrx.conus_annotated_features_gridlines.my-cloud-depth.sh  clavrx.conus_annotated_features_gridlines.my-cloud-top-height.sh  clavrx.conus_netcdf.my-cloud-depth-my-netcdf.sh  clavrx.conus_netcdf.my-cloud-depth-netcdf.sh  clavrx.conus_netcdf.my-cloud-top-height-my-netcdf.sh  clavrx.my_conus_sector.my-cloud-top-height.sh  data_fusion_alg_image.sh  data_fusion_alg_netcdf.sh  data_fusion_layered.sh  test_config.sh  test_config.yaml
